fixes events links and wraps them into noscript like others added anchors to ingreds list

--- a/htdocs/t/event.css
+++ b/htdocs/t/event.css
@@ -32,8 +32,6 @@ background: url(icon/strs-green.png);
 
 .previews .event .mark { position: absolute; left: 77px; top: 166px; width: 25px; height: 14px; background: url(/t/event/mark.png); }
 
-html.loading .previews .viewport { visibility: hidden; }
-
 #both-wrapper { padding: 1px 0; clear: both; overflow: hidden; }
 #both-wrapper .body-wrapper { overflow: hidden; }
 
